# home-info-center

./: .code-workspace  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  Dockerfile  HEUTE_FIX.md  README.md  demo_fix.py  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml  security.yml
LICENSE/: LICENSE
backend/: .env_example  app.py  cache_service.py  config.py  logging_config.py  requirements-dev.txt  requirements.txt
backend/Calendar/: calendar_auth.py  generate_token.py  get_calender.py  get_events.py
backend/FritzBox/: __init__.py  fritzbox_calllist.py
backend/Weather/: __init__.py  weather.py
backend/config_example/: calendars.json  client_secret.json
backend/tests/: __init__.py  conftest.py  test_app_routes.py  test_cache_service.py  test_calendar.py  test_fritzbox_calllist.py  test_weather.py
frontend/Vue/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/Vue/public/: manifest.json  style.css
frontend/Vue/src/: App.vue  main.js
frontend/Vue/src/components/: Appointments.vue  CallList.vue  Weather.vue
frontend/Vue/src/composables/: useApiQuery.js  useCacheStream.js  useVersionedQuery.js  useWakeLock.js
frontend/Vue/src/plugins/: vueQuery.js
frontend/Vue/src/stores/: connection.js
frontend/Vue/src/utils/: api.js  configLoader.js  dateUtils.js  icon-map.js  themeUtils.js
frontend/Vue/tests/: api.test.js
