[project]
name = "home-info-center"
version = "2.0.0"
description = "Family Dashboard – Calendar, FritzBox calls, weather"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE/LICENSE" }
authors = [{ name = "BuschelStack" }]

dependencies = [
    "Flask>=3.1.3",
    "gunicorn>=23.0",
    "google-api-python-client>=2.196",
    "google-auth-oauthlib>=1.4",
    "google-auth>=2.52",
    "google-auth-httplib2>=0.3.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "tenacity>=9.1.4",
    "pytz>=2024.1",
    "tzdata>=2024.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "APScheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.7",
    "mypy>=1.11",
    "types-requests",
    "types-pytz",
    "responses>=0.25",
    "pre-commit>=4.0",
]

[tool.setuptools]
packages = ["backend"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["backend"]
extend-exclude = [
    "backend/venv",
    "backend/config_example",
    "frontend",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "N",      # pep8-naming
    "PTH",    # use pathlib
    "TCH",    # type-checking
    "ARG",    # unused arguments
    "RET",    # return statements
    "PIE",
]
ignore = [
    "E501",   # line-length handled by formatter
    "N806",   # allow non-PEP8 var names in legacy code
    "N999",   # legacy capitalised package names (Calendar, FritzBox, Weather)
    "RUF001", # German umlauts in strings
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-ra --strict-markers --tb=short"
pythonpath = ["backend"]
filterwarnings = [
    "ignore::DeprecationWarning:google.*",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "backend/tests/*",
    "backend/venv/*",
    "backend/config_example/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["backend/venv", "backend/config_example"]
